--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,16 +3,16 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 14,
+"column": 8,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 3,
+"row": 15,
 "scroll_position": 0.0,
 "selection": true,
-"selection_from_column": 7,
-"selection_from_line": 3,
-"selection_to_column": 14,
-"selection_to_line": 3,
+"selection_from_column": 1,
+"selection_from_line": 15,
+"selection_to_column": 8,
+"selection_to_line": 15,
 "syntax_highlighter": "Standard"
 }
 
@@ -21,15 +21,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 4,
+"column": 3,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 11,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 4,
-"selection_from_line": 11,
-"selection_to_column": 24,
-"selection_to_line": 24,
+"row": 38,
+"scroll_position": 9.0,
+"selection": false,
 "syntax_highlighter": "Standard"
 }
