--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/PlayerCharacter.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/", "res://assets/", "res://assets/misc/", "res://assets/maps/")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/sprites/Cloud Ice-walk.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/", "res://assets/", "res://assets/sprites/", "res://assets/misc/", "res://assets/maps/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -28,16 +28,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/MainMenu.tscn", "res://scenes/Map.tscn", "res://scenes/PlayerCharacter.tscn")
-current_scene="res://scenes/Map.tscn"
+current_scene="res://scenes/PlayerCharacter.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://scripts/MainMenu.cs", "res://scripts/PlayerCharacter.cs"]
-selected_script="res://scripts/MainMenu.cs"
+selected_script="res://scripts/PlayerCharacter.cs"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
