--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/sprites/Cloud Ice-walk.png")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/PlayerCharacter.gdshader")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/", "res://assets/", "res://assets/sprites/", "res://assets/misc/", "res://assets/maps/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -31,7 +31,7 @@ open_scenes=PackedStringArray("res://scenes/MainMenu.tscn", "res://scenes/Map.ts
 current_scene="res://scenes/PlayerCharacter.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
@@ -44,6 +44,6 @@ list_split_offset=0
 
 [ShaderEditor]
 
-open_shaders=[]
-split_offset=0
-selected_shader=""
+open_shaders=["res://scenes/PlayerCharacter.gdshader"]
+split_offset=219
+selected_shader="res://scenes/PlayerCharacter.gdshader"
