Added Animations, Window scaling, sample menus

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,16 +3,12 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 70,
+"column": 47,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 17,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 47,
-"selection_from_line": 17,
-"selection_to_column": 70,
-"selection_to_line": 17,
+"selection": false,
 "syntax_highlighter": "Standard"
 }
 
@@ -21,11 +17,71 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 41,
+"column": 36,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 66,
-"scroll_position": 36.0,
+"row": 3,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 21,
+"selection_from_line": 3,
+"selection_to_column": 36,
+"selection_to_line": 3,
+"syntax_highlighter": "Standard"
+}
+
+[res://scripts/SettingsMenu.cs]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 1,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 14,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "Standard"
+}
+
+[res://scripts/GameScript.cs]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 1,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 15,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "Standard"
+}
+
+[res://scripts/BackSettingsMenuButton.cs]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "Standard"
+}
+
+[res://scripts/Map.cs]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 52,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 15,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "Standard"
 }
