--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scripts/PlayerCharacter.cs")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/CreditsMenu.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/", "res://assets/", "res://assets/sprites/", "res://assets/misc/", "res://assets/maps/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -27,17 +27,17 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/MainMenu.tscn", "res://scenes/Map.tscn", "res://scenes/ChestBody.tscn", "res://scenes/PlayerCharacter.tscn")
-current_scene="res://scenes/PlayerCharacter.tscn"
+open_scenes=PackedStringArray("res://scenes/MainMenu.tscn", "res://scenes/Map.tscn", "res://scenes/ChestBody.tscn", "res://scenes/PlayerCharacter.tscn", "res://scenes/SettingsMenu.tscn", "res://scenes/LoadGameMenu.tscn")
+current_scene="res://scenes/LoadGameMenu.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_main_editor_idx=0
+selected_bottom_panel_item=14
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/MainMenu.cs", "res://scripts/PlayerCharacter.cs"]
-selected_script="res://scripts/PlayerCharacter.cs"
+open_scripts=["res://scripts/BackSettingsMenuButton.cs", "res://scripts/GameScript.cs", "res://scripts/MainMenu.cs", "res://scripts/Map.cs", "res://scripts/PlayerCharacter.cs", "res://scripts/SettingsMenu.cs"]
+selected_script="res://scripts/SettingsMenu.cs"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
