--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 37,
+"column": 58,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 59,
-"scroll_position": 147.0,
+"row": 69,
+"scroll_position": 45.0,
 "selection": false,
 "syntax_highlighter": "Standard"
 }
@@ -31,11 +31,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 43,
+"column": 22,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 111,
-"scroll_position": 117.0,
+"row": 8,
+"scroll_position": 3.0,
 "selection": false,
 "syntax_highlighter": "Standard"
 }
@@ -59,12 +59,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 33,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 11,
+"row": 12,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 2,
+"selection_from_line": 12,
+"selection_to_column": 57,
+"selection_to_line": 13,
 "syntax_highlighter": "Standard"
 }
 
@@ -77,7 +81,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 38,
-"scroll_position": 9.0,
+"scroll_position": 10.0,
 "selection": false,
 "syntax_highlighter": "Standard"
 }
@@ -91,7 +95,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 25,
-"scroll_position": 2.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "Standard"
 }
@@ -115,11 +119,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 41,
-"scroll_position": 21.0,
+"row": 10,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "Standard"
 }
@@ -147,7 +151,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 25,
-"scroll_position": 2.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "Standard"
 }
@@ -157,11 +161,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 67,
+"column": 65,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 20,
-"scroll_position": 6.0,
+"row": 31,
+"scroll_position": 3.0,
 "selection": false,
 "syntax_highlighter": "Standard"
 }
@@ -171,10 +175,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 23,
+"column": 35,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 3,
+"row": 13,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "Standard"
@@ -213,11 +217,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 50,
+"column": 34,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 55,
-"scroll_position": 9.0,
+"row": 10,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "Standard"
 }
