--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,15 +19,15 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/menus/InventoryMenu.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scripts/inventory/", "res://scenes/", "res://scenes/menus/", "res://scenes/maps/", "res://assets/", "res://assets/sprites/", "res://assets/misc/", "res://assets/maps/")
+dock_filesystem_selected_paths=PackedStringArray("res://scripts/data/CharacterData.cs")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scripts/inventory/", "res://scripts/data/", "res://scenes/", "res://scenes/menus/", "res://scenes/maps/", "res://assets/", "res://assets/sprites/", "res://assets/misc/", "res://assets/maps/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/menus/MainMenu.tscn", "res://scenes/PlayerCharacter.tscn", "res://scenes/menus/SettingsMenu.tscn", "res://scenes/menus/LoadGameMenu.tscn", "res://scenes/menus/CreditsMenu.tscn", "res://scenes/UserInterface.tscn", "res://scenes/maps/MapVault.tscn", "res://scenes/menus/PauseMenu.tscn", "res://scenes/menus/CharacterCreationMenu.tscn", "res://scenes/menus/InventoryMenu.tscn", "res://scenes/maps/MapSwamp.tscn")
+open_scenes=PackedStringArray("res://scenes/menus/MainMenu.tscn", "res://scenes/PlayerCharacter.tscn", "res://scenes/menus/SettingsMenu.tscn", "res://scenes/menus/LoadGameMenu.tscn", "res://scenes/menus/CreditsMenu.tscn", "res://scenes/UserInterface.tscn", "res://scenes/menus/PauseMenu.tscn", "res://scenes/menus/CharacterCreationMenu.tscn", "res://scenes/menus/InventoryMenu.tscn", "res://scenes/maps/MapSwamp.tscn", "res://scenes/maps/MapVault.tscn")
 current_scene="res://scenes/menus/CharacterCreationMenu.tscn"
 center_split_offset=-352
 selected_default_debugger_tab_idx=0
@@ -36,7 +36,7 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scenes/maps/Camera2D.cs", "res://scripts/menus/CharacterCreationMenu.cs", "res://scripts/ChestBody.cs", "res://scripts/menus/CreditsMenu.cs", "res://scripts/GameScript.cs", "res://scripts/inventory/Inventory.cs", "res://scripts/InventoryMenu.cs", "res://scripts/inventory/Item.cs", "res://scripts/menus/LoadGameMenu.cs", "res://scripts/menus/MainMenu.cs", "res://scripts/MapSwamp.cs", "res://scripts/MapVault.cs", "res://scripts/menus/PauseMenu.cs", "res://scripts/PlayerCharacter.cs", "res://scripts/menus/SettingsMenu.cs", "res://scripts/inventory/Stats.cs", "res://scripts/UserInterface.cs"]
+open_scripts=["res://scenes/maps/Camera2D.cs", "res://scripts/menus/CharacterCreationMenu.cs", "res://scripts/data/CharacterData.cs", "res://scripts/ChestBody.cs", "res://scripts/menus/CreditsMenu.cs", "res://scripts/GameScript.cs", "res://scripts/inventory/Inventory.cs", "res://scripts/InventoryMenu.cs", "res://scripts/inventory/Item.cs", "res://scripts/menus/LoadGameMenu.cs", "res://scripts/menus/MainMenu.cs", "res://scripts/MapSwamp.cs", "res://scripts/MapVault.cs", "res://scripts/menus/PauseMenu.cs", "res://scripts/PlayerCharacter.cs", "res://scripts/menus/SettingsMenu.cs", "res://scripts/inventory/Stats.cs", "res://scripts/UserInterface.cs"]
 selected_script="res://scripts/menus/CharacterCreationMenu.cs"
 open_help=["CSharpScript", "PopupMenu", "TileSet"]
 script_split_offset=70
