--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 77,
+"column": 53,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 36,
-"scroll_position": 98.0,
+"row": 60,
+"scroll_position": 58.0,
 "selection": false,
 "syntax_highlighter": "Standard"
 }
@@ -31,10 +31,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 22,
+"column": 48,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 8,
+"row": 18,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "Standard"
@@ -62,7 +62,7 @@ state={
 "column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 10,
+"row": 7,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "Standard"
@@ -77,7 +77,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 38,
-"scroll_position": 10.0,
+"scroll_position": 13.0,
 "selection": false,
 "syntax_highlighter": "Standard"
 }
@@ -105,7 +105,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 19,
-"scroll_position": 6.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "Standard"
 }
@@ -115,10 +115,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
+"column": 18,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 10,
+"row": 41,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "Standard"
@@ -157,11 +157,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 51,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 51,
-"scroll_position": 37.0,
+"row": 70,
+"scroll_position": 52.0,
 "selection": false,
 "syntax_highlighter": "Standard"
 }
@@ -171,11 +171,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 35,
+"column": 25,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 13,
-"scroll_position": 0.0,
+"row": 11,
+"scroll_position": 4.0,
 "selection": false,
 "syntax_highlighter": "Standard"
 }
@@ -199,12 +199,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 23,
-"scroll_position": 18.0,
-"selection": false,
+"row": 81,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 0,
+"selection_to_column": 0,
+"selection_to_line": 81,
 "syntax_highlighter": "Standard"
 }
 
@@ -213,16 +217,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 140,
+"column": 33,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 31,
-"scroll_position": 23.0,
-"selection": true,
-"selection_from_column": 2,
-"selection_from_line": 24,
-"selection_to_column": 140,
-"selection_to_line": 31,
+"row": 71,
+"scroll_position": 47.0,
+"selection": false,
 "syntax_highlighter": "Standard"
 }
 
@@ -237,5 +237,23 @@ state={
 "row": 3,
 "scroll_position": 0.0,
 "selection": false,
+"syntax_highlighter": "Standard"
+}
+
+[res://scripts/data/CharacterData.cs]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 25,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 32,
+"scroll_position": 6.0,
+"selection": true,
+"selection_from_column": 14,
+"selection_from_line": 32,
+"selection_to_column": 25,
+"selection_to_line": 32,
 "syntax_highlighter": "Standard"
 }
