Fixed Dialogue System

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scripts/menus/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scripts/dialogues/", "res://scripts/characters/", "res://scripts/characters/enemies/", "res://scenes/", "res://scenes/player/", "res://scenes/objects/", "res://scenes/menus/", "res://scenes/maps/", "res://scenes/characters/", "res://scenes/characters/npcs/", "res://scenes/characters/enemies/", "res://assets/", "res://assets/sprites/", "res://assets/sprites/vaultmember/", "res://assets/sprites/player/", "res://assets/sprites/ghoul/", "res://assets/misc/", "res://assets/maps/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/menus/MainMenu.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scripts/dialogues/", "res://scripts/data/", "res://scripts/characters/", "res://scripts/characters/enemies/", "res://scenes/", "res://scenes/player/", "res://scenes/objects/", "res://scenes/menus/", "res://scenes/maps/", "res://scenes/characters/", "res://scenes/characters/npcs/", "res://scenes/characters/enemies/", "res://assets/", "res://assets/sprites/", "res://assets/sprites/vaultmember/", "res://assets/sprites/player/", "res://assets/sprites/ghoul/", "res://assets/misc/", "res://assets/maps/", "res://assets/dialogues/")
 dock_bottom=[]
 dock_closed=[]
 dock_filesystem_h_split_offset=240
@@ -31,17 +31,17 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/menus/MainMenu.tscn", "res://scenes/characters/enemies/GhoulCharacter.tscn", "res://scenes/maps/MapSwamp.tscn", "res://scenes/maps/MapVault.tscn", "res://scenes/objects/ChestBody.tscn", "res://scenes/objects/BarrelBody.tscn", "res://scenes/player/UserInterface.tscn", "res://scenes/menus/InventoryMenu.tscn", "res://scenes/menus/ItemInventoryMenu.tscn", "res://scenes/menus/PauseMenu.tscn", "res://scenes/menus/SettingsMenu.tscn", "res://scenes/characters/npcs/VaultMemberCharacter.tscn", "res://scenes/menus/DialogueMenu.tscn", "res://scenes/menus/LoadGameMenu.tscn")
-current_scene="res://scenes/characters/enemies/GhoulCharacter.tscn"
+open_scenes=PackedStringArray("res://scenes/menus/MainMenu.tscn", "res://scenes/characters/enemies/GhoulCharacter.tscn", "res://scenes/maps/MapSwamp.tscn", "res://scenes/maps/MapVault.tscn", "res://scenes/objects/ChestBody.tscn", "res://scenes/objects/BarrelBody.tscn", "res://scenes/player/UserInterface.tscn", "res://scenes/menus/InventoryMenu.tscn", "res://scenes/menus/ItemInventoryMenu.tscn", "res://scenes/menus/PauseMenu.tscn", "res://scenes/menus/SettingsMenu.tscn", "res://scenes/characters/npcs/VaultMemberCharacter.tscn", "res://scenes/menus/DialogueMenu.tscn", "res://scenes/menus/LoadGameMenu.tscn", "res://scenes/player/PlayerCharacter.tscn", "res://scenes/menus/CreditsMenu.tscn")
+current_scene="res://scenes/menus/MainMenu.tscn"
 center_split_offset=-352
-selected_default_debugger_tab_idx=1
-selected_main_editor_idx=0
-selected_bottom_panel_item=1
+selected_default_debugger_tab_idx=5
+selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/characters/enemies/BanditEnemy.cs", "res://scripts/nonusable/BarrelBody.cs", "res://scenes/maps/Camera2D.cs", "res://scripts/characters/CharacterBase.cs", "res://scripts/menus/CharacterCreationMenu.cs", "res://scripts/data/CharacterData.cs", "res://scripts/usables/ChestBody.cs", "res://scripts/menus/CreditsMenu.cs", "res://scripts/dialogues/Dialogue.cs", "res://scripts/dialogues/DialogueChoice.cs", "res://scripts/dialogues/DialogueManager.cs", "res://scripts/menus/DialogueMenu.cs", "res://scripts/characters/EnemyCharacter.cs", "res://scripts/characters/enemies/GhoulEnemy.cs", "res://scripts/inventory/Inventory.cs", "res://scripts/data/InventoryMenu.cs", "res://scripts/inventory/Item.cs", "res://scripts/menus/ItemInventoryMenu.cs", "res://scripts/menus/LoadGameMenu.cs", "res://scripts/menus/MainMenu.cs", "res://scripts/maps/MapChange.cs", "res://scripts/maps/MapSwamp.cs", "res://scripts/maps/MapVault.cs", "res://scripts/characters/NonPlayerCharacter.cs", "res://scripts/menus/PauseMenu.cs", "res://scripts/characters/PlayerCharacter.cs", "res://scripts/menus/SettingsMenu.cs", "res://scripts/inventory/Stats.cs", "res://scripts/menus/UserInterface.cs"]
-selected_script="res://scripts/characters/enemies/GhoulEnemy.cs"
+open_scripts=["res://scripts/characters/enemies/BanditEnemy.cs", "res://scripts/nonusable/BarrelBody.cs", "res://scenes/maps/Camera2D.cs", "res://scripts/characters/CharacterBase.cs", "res://scripts/menus/CharacterCreationMenu.cs", "res://scripts/data/CharacterData.cs", "res://scripts/usables/ChestBody.cs", "res://scripts/menus/CreditsMenu.cs", "res://scripts/dialogues/Dialogue.cs", "res://scripts/dialogues/DialogueCharacter.cs", "res://scripts/dialogues/DialogueChoice.cs", "res://scripts/dialogues/DialogueManager.cs", "res://scripts/menus/DialogueMenu.cs", "res://assets/dialogues/dialogues.json", "res://scripts/characters/EnemyCharacter.cs", "res://scripts/characters/enemies/GhoulEnemy.cs", "res://scripts/inventory/Inventory.cs", "res://scripts/data/InventoryMenu.cs", "res://scripts/inventory/Item.cs", "res://scripts/menus/ItemInventoryMenu.cs", "res://scripts/menus/LoadGameMenu.cs", "res://scripts/menus/MainMenu.cs", "res://scripts/maps/MapChange.cs", "res://scripts/maps/MapSwamp.cs", "res://scripts/maps/MapVault.cs", "res://scripts/characters/NonPlayerCharacter.cs", "res://scripts/menus/PauseMenu.cs", "res://scripts/characters/PlayerCharacter.cs", "res://scripts/menus/SettingsMenu.cs", "res://scripts/inventory/Stats.cs", "res://scripts/menus/UserInterface.cs"]
+selected_script="res://scripts/dialogues/DialogueManager.cs"
 open_help=["CSharpScript", "PopupMenu", "TileSet"]
 script_split_offset=70
 list_split_offset=0
@@ -58,7 +58,7 @@ text_shader_zoom_factor=1.0
 
 log_filter_0=true
 log_filter_2=true
-log_filter_1=false
+log_filter_1=true
 log_filter_3=true
 log_filter_4=true
 collapse=false
