--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -35,10 +35,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
+"column": 35,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 7,
+"row": 9,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "Standard"
@@ -95,11 +95,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 43,
+"column": 63,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 84,
-"scroll_position": 0.0,
+"row": 38,
+"scroll_position": 15.0,
 "selection": false,
 "syntax_highlighter": "Standard"
 }
@@ -159,7 +159,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 18,
-"scroll_position": 0.0,
+"scroll_position": 5.0,
 "selection": false,
 "syntax_highlighter": "Standard"
 }
@@ -187,16 +187,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
+"column": 24,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 82,
-"scroll_position": 54.0,
-"selection": true,
-"selection_from_column": 2,
-"selection_from_line": 82,
-"selection_to_column": 2,
-"selection_to_line": 83,
+"row": 7,
+"scroll_position": 52.0,
+"selection": false,
 "syntax_highlighter": "Standard"
 }
 
@@ -205,12 +201,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 33,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 71,
+"row": 9,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 9,
+"selection_to_column": 22,
+"selection_to_line": 9,
 "syntax_highlighter": "Standard"
 }
 
@@ -223,7 +223,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 203,
-"scroll_position": 18.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "Standard"
 }
@@ -265,7 +265,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 21,
-"scroll_position": 22.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "Standard"
 }
@@ -275,11 +275,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 5,
+"column": 67,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 112,
-"scroll_position": 79.0,
+"row": 64,
+"scroll_position": 31.0,
 "selection": false,
 "syntax_highlighter": "Standard"
 }
@@ -368,31 +368,21 @@ state={
 "syntax_highlighter": "Standard"
 }
 
-[res://scripts/dialogues/Dialogue.cs]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 30,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 10,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "Standard"
-}
-
 [res://scripts/dialogues/DialogueChoice.cs]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 27,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 2,
+"row": 17,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 0,
+"selection_to_column": 0,
+"selection_to_line": 17,
 "syntax_highlighter": "Standard"
 }
 
@@ -401,16 +391,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 40,
+"column": 24,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 46,
-"scroll_position": 28.0,
-"selection": true,
-"selection_from_column": 25,
-"selection_from_line": 46,
-"selection_to_column": 40,
-"selection_to_line": 46,
+"row": 14,
+"scroll_position": 0.0,
+"selection": false,
 "syntax_highlighter": "Standard"
 }
 
@@ -419,11 +405,61 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
+"row": 11,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "Standard"
+}
+
+[res://scripts/dialogues/Dialogue.cs]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 17,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 0,
+"selection_to_column": 0,
+"selection_to_line": 17,
+"syntax_highlighter": "Standard"
+}
+
+[res://scripts/dialogues/DialogueCharacter.cs]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 11,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 0,
+"selection_to_column": 0,
+"selection_to_line": 11,
+"syntax_highlighter": "Standard"
+}
+
+[res://assets/dialogues/dialogues.json]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 5,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 36,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "JSON"
 }
