Dialogue Menu Double Click Fix

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -195,7 +195,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 19,
-"scroll_position": 4.0,
+"scroll_position": 2.0,
 "selection": false,
 "syntax_highlighter": "Standard"
 }
@@ -205,11 +205,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 22,
+"column": 65,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 88,
-"scroll_position": 29.0,
+"row": 23,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "Standard"
 }
@@ -219,11 +219,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 59,
+"column": 58,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 28,
-"scroll_position": 0.0,
+"row": 264,
+"scroll_position": 256.0,
 "selection": false,
 "syntax_highlighter": "Standard"
 }
@@ -233,11 +233,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 44,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 17,
-"scroll_position": 0.0,
+"row": 41,
+"scroll_position": 27.0,
 "selection": false,
 "syntax_highlighter": "Standard"
 }
@@ -247,12 +247,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 45,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 11,
+"row": 77,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 0,
+"selection_to_column": 0,
+"selection_to_line": 77,
 "syntax_highlighter": "Standard"
 }
 
@@ -261,12 +265,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
+"column": 44,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 21,
+"row": 6,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 5,
+"selection_to_column": 44,
+"selection_to_line": 6,
 "syntax_highlighter": "Standard"
 }
 
@@ -275,10 +283,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
+"column": 72,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 8,
+"row": 19,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "Standard"
@@ -345,10 +353,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 5,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 10,
+"row": 26,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "Standard"
@@ -391,12 +399,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 34,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 18,
-"scroll_position": 19.0,
-"selection": false,
+"row": 105,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 0,
+"selection_to_column": 0,
+"selection_to_line": 105,
 "syntax_highlighter": "Standard"
 }
 
@@ -441,11 +453,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 5,
+"column": 9,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 36,
-"scroll_position": 11.0,
+"row": 28,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "JSON"
 }
@@ -455,11 +467,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
+"column": 46,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 19,
-"scroll_position": 0.0,
+"row": 70,
+"scroll_position": 50.0,
 "selection": false,
 "syntax_highlighter": "Standard"
 }
