--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -397,16 +397,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 27,
+"column": 5,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 215,
-"scroll_position": 191.0,
-"selection": true,
-"selection_from_column": 12,
-"selection_from_line": 215,
-"selection_to_column": 27,
-"selection_to_line": 215,
+"row": 19,
+"scroll_position": 0.0,
+"selection": false,
 "syntax_highlighter": "JSON"
 }
 
@@ -767,7 +763,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 72,
-"scroll_position": 40.0,
+"scroll_position": 42.0,
 "selection": true,
 "selection_from_column": 24,
 "selection_from_line": 72,
@@ -809,10 +805,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 17,
+"column": 22,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 19,
+"row": 22,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "Standard"
