--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/menus/SettingsMenu.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scripts/", "res://scripts/menus/", "res://scenes/", "res://scenes/menus/", "res://assets/", "res://assets/misc/")
+dock_filesystem_selected_paths=PackedStringArray()
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scripts/", "res://scripts/menus/", "res://scripts/dialogues/", "res://scripts/data/", "res://scripts/characters/", "res://scripts/characters/enemies/", "res://scenes/", "res://scenes/menus/", "res://scenes/maps/", "res://scenes/characters/", "res://scenes/characters/npcs/", "res://scenes/characters/enemies/", "res://assets/", "res://assets/sprites/", "res://assets/sprites/bandit/", "res://assets/settings/")
 dock_bottom=[]
 dock_closed=[]
 dock_filesystem_h_split_offset=240
@@ -31,17 +31,17 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/maps/MapVault.tscn", "res://scenes/maps/MapSwamp.tscn", "res://scenes/maps/MapDesert.tscn", "res://scenes/maps/MapMountains.tscn", "res://scenes/player/PlayerCharacter.tscn", "res://scenes/characters/enemies/GhoulCharacter.tscn", "res://scenes/objects/usables/Chest.tscn", "res://scenes/menus/SettingsMenu.tscn", "res://scenes/menus/GameWonMenu.tscn", "res://scenes/menus/DialogueMenu.tscn", "res://scenes/menus/LoadGameMenu.tscn", "res://scenes/menus/MainMenu.tscn", "res://scenes/menus/CharacterCreationMenu.tscn", "res://scenes/characters/npcs/VaultMemberCharacter.tscn", "res://scenes/menus/SkillsMenu.tscn", "res://scenes/player/UserInterface.tscn", "res://scenes/objects/nonusables/Barrel.tscn", "res://scenes/characters/npcs/VaultDwellerCharacter.tscn", "res://scenes/characters/enemies/BanditCharacter.tscn", "res://scenes/characters/enemies/ZebraCharacter.tscn", "res://scenes/characters/enemies/BossCharacter.tscn", "res://scenes/characters/npcs/WastelanderCharacter.tscn")
-current_scene="res://scenes/menus/SettingsMenu.tscn"
+open_scenes=PackedStringArray("res://scenes/maps/MapVault.tscn", "res://scenes/maps/MapSwamp.tscn", "res://scenes/maps/MapDesert.tscn", "res://scenes/maps/MapMountains.tscn", "res://scenes/player/PlayerCharacter.tscn", "res://scenes/characters/enemies/GhoulCharacter.tscn", "res://scenes/objects/usables/Chest.tscn", "res://scenes/menus/SettingsMenu.tscn", "res://scenes/menus/GameWonMenu.tscn", "res://scenes/menus/DialogueMenu.tscn", "res://scenes/menus/LoadGameMenu.tscn", "res://scenes/menus/MainMenu.tscn", "res://scenes/menus/CharacterCreationMenu.tscn", "res://scenes/characters/npcs/VaultMemberCharacter.tscn", "res://scenes/menus/SkillsMenu.tscn", "res://scenes/player/UserInterface.tscn", "res://scenes/objects/nonusables/Barrel.tscn", "res://scenes/characters/npcs/VaultDwellerCharacter.tscn", "res://scenes/characters/enemies/BanditCharacter.tscn", "res://scenes/characters/enemies/ZebraCharacter.tscn", "res://scenes/characters/enemies/BossCharacter.tscn", "res://scenes/characters/npcs/WastelanderCharacter.tscn", "res://scenes/menus/ItemInventoryMenu.tscn")
+current_scene="res://scenes/menus/ItemInventoryMenu.tscn"
 center_split_offset=-444
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_main_editor_idx=2
+selected_bottom_panel_item=14
 
 [ScriptEditor]
 
 open_scripts=["res://scripts/inventory/armor/Armor.cs", "res://scripts/characters/enemies/BanditEnemy.cs", "res://scripts/characters/enemies/BossEnemy.cs", "res://scripts/inventory/Bullet.cs", "res://scripts/maps/Camera2D.cs", "res://scripts/inventory/consumables/Caps.cs", "res://scripts/characters/CharacterBase.cs", "res://scripts/menus/CharacterCreationMenu.cs", "res://scripts/data/CharacterData.cs", "res://scripts/usables/ChestBody.cs", "res://scripts/menus/CreditsMenu.cs", "res://scripts/dialogues/Dialogue.cs", "res://scripts/dialogues/DialogueCharacter.cs", "res://scripts/dialogues/DialogueChoice.cs", "res://scripts/dialogues/DialogueManager.cs", "res://scripts/menus/DialogueMenu.cs", "res://assets/dialogues/dialogues.json", "res://scripts/data/Ending.cs", "res://assets/endings/endings.json", "res://scripts/characters/EnemyCharacter.cs", "res://scripts/data/GameData.cs", "res://scripts/menus/GameLostMenu.cs", "res://scripts/menus/GameWonMenu.cs", "res://scripts/characters/enemies/GhoulEnemy.cs", "res://scripts/inventory/Inventory.cs", "res://scripts/menus/InventoryMenu.cs", "res://scripts/inventory/Item.cs", "res://scripts/menus/ItemInventoryMenu.cs", "res://scripts/inventory/weapons/Knife.cs", "res://scripts/menus/LoadGameMenu.cs", "res://scripts/menus/MainMenu.cs", "res://scripts/maps/MapChange.cs", "res://scripts/maps/MapDesert.cs", "res://scripts/maps/MapMountains.cs", "res://scripts/maps/MapSwamp.cs", "res://scripts/maps/MapVault.cs", "res://scripts/inventory/armor/MediumArmor.cs", "res://scripts/inventory/consumables/MediumHealingPotion.cs", "res://scripts/usables/MetalDoor.cs", "res://scripts/inventory/weapons/MilitaryRifle.cs", "res://scripts/characters/NonPlayerCharacter.cs", "res://scripts/menus/PauseMenu.cs", "res://scripts/characters/PlayerCharacter.cs", "res://scripts/inventory/consumables/PreWarMoney.cs", "res://scripts/data/Settings.cs", "res://assets/settings/settings.json", "res://scripts/data/SettingsData.cs", "res://scripts/menus/SettingsMenu.cs", "res://scripts/menus/SkillsMenu.cs", "res://scripts/inventory/Stats.cs", "res://scripts/menus/UserInterface.cs", "res://scripts/usables/VaultDoor.cs", "res://scripts/inventory/weapons/Weapon.cs", "res://scripts/characters/enemies/ZebraEnemy.cs"]
-selected_script="res://scripts/menus/SettingsMenu.cs"
+selected_script="res://scripts/characters/enemies/BossEnemy.cs"
 open_help=["Button", "CSharpScript", "PopupMenu", "TileSet"]
 script_split_offset=150
 list_split_offset=0
